add content localization